Tweaked centered alignment for all desktop sections, fixed hero margin

--- a/src/sass/includes/front-page/front-page.scss
+++ b/src/sass/includes/front-page/front-page.scss
@@ -11,6 +11,10 @@ section {
     align-items: center;
     justify-content: center;
 
+    @media screen and (min-width: 1300px) {
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
 }
 
 h3 {
