--- a/src/sass/includes/front-page/hero.scss
+++ b/src/sass/includes/front-page/hero.scss
@@ -78,7 +78,7 @@
         }
 
         @media screen and (min-width: 1300px) {
-            padding-top: 225px;
+            padding-top: 482px;
             display: block;
             margin-top: 0;
         }
